# service/src/main/resources/api.yml
@@ -127,6 +127,9 @@ paths:
           schema:
             type: string
             format: date
+        - $ref: '#/components/parameters/orderBy'
+        - $ref: '#/components/parameters/limit'
+
       responses:
         201:
           description: Created
@@ -291,3 +294,18 @@ components:
             type: array
             items:
               $ref: '#/components/schemas/ResponseError'
+
+  parameters:
+    orderBy:
+      name: orderBy
+      in: query
+      description: Filed to order by
+      schema:
+        type: string
+
+    limit:
+      name: limit
+      in: query
+      description: Maximum number of returned records
+      schema:
+        type: integer
